# SHOTreview

./: CMakeLists.txt  README.md  SHOTMain.cpp  shot.cpp  shot.h
src/: SHOTMain.cpp  shot.cpp  utils.cpp
