project(SHOT)
cmake_minimum_required(VERSION 2.8)

set (CMAKE_CXX_STANDARD 11)
SET( CMAKE_BUILD_TYPE Debug Release )

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

find_package(VTK REQUIRED)
include(${VTK_USE_FILE})

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )
LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)

LINK_DIRECTORIES( /usr/local/lib )

ADD_SUBDIRECTORY(
    ${PROJECT_SOURCE_DIR}/src
    )
